2008-12-26  Michiel Roos <michiel@netcreators.com>

	* #10016 added file compat/class.ux_template.php (excuse me)

2008-12-26  Michiel Roos <michiel@netcreators.com>

	* Setting version to 1.1.0
	* DAM now requires TYPO3 version 4.2.3 because of http://bugs.typo3.org/view.php?id=10016
	* Updated manual (Setup DAM-Backend-Permissions (Backend-Users/Groups))
	* Removed execute permission from Changelog and ext_update.php
	* Fixed #10015: dam tries to load $TCA['tt_news'] without checking whether tt_news is loaded (Thanks to Uschi Renziehausen)
	* Fixed #10016: DAM 1.1 relies on fix for bug 0009511 (Thanks to Michael Stucki)

2008-12-25  Benjamin Mack <benni@typo3.org>

	* Updated manual (minor spelling issues)

2008-12-24  Michiel Roos <michiel@netcreators.com>

	* Fixed #9481: Replace hard-coded reference to cc_devlog (Thanks to Francois Suter)
	* Fixed #9750: Images in RTE are not rendered in Frontend (Thanks to Gerhard Rupp and Stanislas Rolland)
	* Fixed #9921: Markers not filled during 'batch operations' (Thanks to Dan Osipov)

2008-12-23  Michiel Roos <michiel@netcreators.com>

	* DAM now requires TYPO3 version 4.2.4 because of http://bugs.typo3.org/view.php?id=9511

2008-12-22  Michiel Roos <michiel@netcreators.com>

	* Fixed #9998: Add upload button (Thanks to Dan Osipov and Steffen Kamper)

2008-12-20  Michiel Roos <michiel@netcreators.com>

	* Fixed #9954 Mark All / Mark None does not work in Media->List (Thanks to Martin Holtz)
	* Fixed #9939 Category selection does not work when processing files (Thanks to Michiel Roos)

2008-12-19  Michiel Roos <michiel@netcreators.com>

	* Fixed #8209: add flv mime-type to tx_dam_types.php (Thanks to Alexander Onea)

2008-12-15  Michiel Roos <michiel@netcreators.com>

	* Fixed #9960: Move tab config to page TSconfig (Thanks to Steffen Gebert)
	* follow up patch to feature #9819, fixing two issues in the Info->Usage submodule (Thanks to Stanislas Rolland)

2008-12-15  Michiel Roos <michiel@netcreators.com>
