@@ -1,3 +1,7 @@
+2009-01-12  Michiel Roos <michiel@netcreators.com>
+
+	* #10017 Add Icons to page:module TCEform
+
 2008-12-26  Michiel Roos <michiel@netcreators.com>
 
 	* #10016 added file compat/class.ux_template.php (excuse me)
